2002-06-03 Monday 09:14  mche

	* tparser.c (1.176): token SaveTic in tparser

2002-06-01 Saturday 14:19  mche

	* fidoconf.h (1.118), line.c (1.300): token SaveTic expanded

2002-05-30 Thursday 15:25  stas

	* common.c (1.86): Check NULL pointers in patimat()

2002-05-28 Tuesday 17:25  mche

	* line.c (1.299): parseSaveTic() improved

2002-05-25 Saturday 16:32  d.sergienko

	* afixcmd.c (1.4): added #include <ctype.h> for isspace(),
	isdigit().

2002-05-24 Friday 08:34  pavel.gulchouck

	* line.c (1.298): fix spelling

2002-05-24 Friday 08:31  pavel.gulchouck

	* line.c (1.297): getDescription fix - process tab as whitespace

2002-05-22 Wednesday 13:19  mche

	* afixcmd.c (1.3), afixcmd.h (1.5): new version of
	DelLinkFromString() moved from hpt to fidoconfig for common use in
	hpt & htick

2002-05-20 Monday 11:36  pavel.gulchouck

	* line.c (1.296), fidoconf.c (1.76): BeOS compilation fix

2002-05-19 Sunday 11:08  pavel.gulchouck

	* adcase.c (1.8): avoid warning

2002-05-17 Friday 22:05  pavel.gulchouck

	* makeperl.mvc (1.6): use makefile.mvc instead of makeperl.mvc

2002-05-17 Friday 17:55  pavel.gulchouck

	* makeperl.mvcdll (1.6): Use makefile.mvcdll instead of
	makeperl.mvcdll

2002-05-17 Friday 07:56  mche

	* fidoconf.h (1.117), line.c (1.295), tokens.h (1.32),
	doc/keywords.hpt (1.25): new token for link  "LinkFileFaseDir"
	Where autocreated file echos will be placed (may be "passthrough")

2002-05-15 Wednesday 19:04  mche

	* afixcmn.c (1.8): fast msgid generation

2002-05-14 Tuesday 16:13  pavel.gulchouck

	* typesize.h (1.21): mingw32 compilation fix

2002-05-12 Sunday 14:06  mche

	* tparser.c (1.175): expanded pauses in tparser

2002-05-12 Sunday 13:54  mche

	* line.c (1.294): fixed bug with pausing links for fileechoareas

2002-05-12 Sunday 13:52  mche

	* common.c (1.85): fixed bug with pausing links for echoareas

2002-05-11 Saturday 15:32  mche

	* afixcmn.c (1.7): fix cygwin warnings

2002-05-11 Saturday 12:16  mche
